--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
    "source": [
     "names_and_ranks = []\n",
     "\n",
-    "\n",
+    "for cit\n",
     "# write a for loop that adds the properly formatted string \n",
     "# to the names_and_ranks list\n",
     "\n"
