--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
     "names_and_ranks = []\n",
     "\n",
     "for city in cities:\n",
-    "    \n",
+    "    names_and_ranks.append(f'')\n",
     "# write a for loop that adds the properly formatted string \n",
     "# to the names_and_ranks list\n",
     "\n"
